# Anchor-Text

./: .env.example  =0.8.0  LICENSE  README.md  anchor.py  pyproject.toml  requirements.txt
.beads/: issues.jsonl
.claude/: settings.local.json
src/anchor_text/: __init__.py  __main__.py  cli.py  config.py
src/anchor_text.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/anchor_text/core/: __init__.py  models.py  scaffolding.py  transformer.py
src/anchor_text/formats/: __init__.py  base.py  docx_handler.py  epub_handler.py  odt_handler.py  pdf_handler.py  rtf_handler.py  txt_handler.py
src/anchor_text/formatting/: __init__.py  ir.py  parser.py
src/anchor_text/lexical/: __init__.py  analyzer.py  guide.py  primer.py
src/anchor_text/llm/: __init__.py  chunker.py  client.py  prompts.py  traps.py
tests/: __init__.py  conftest.py  test_cli.py  test_format_handlers.py  test_lexical.py  test_parser.py  test_primer.py  test_scaffolding.py  test_transformer.py  test_traps.py  test_validation.py
tests/fixtures/: sample.txt
tests/test_formats/: test_txt.py
